# Algorithms

./: .gitignore  README.md
dataStructures/linkedList/c/: linkedList.c  main
dataStructures/queue/c/: queue.c
dataStructures/stack/c/: stack.c
searching/c/: dfs.c
searching/rust/src/: binary.rs  binary_search.rs  main.rs
sorting/ocaml/merge/: .ocamlformat  dune-project
sorting/ocaml/merge/lib/: dune
sorting/ocaml/merge/test/: dune
sorting/rust/src/: bubble.rs  main.rs  quick.rs
