(lang dune 3.10)

(name ocaml_merge)

(generate_opam_files true)

(source
 (github Tibor5/Algorithms))

(authors "Tibor Novaković")

(maintainers "Tibor Novaković")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocaml_merge)
 (synopsis "Merge sort implementation in OCaml")
 (description "Merge sort implemented using OCaml.")
 (depends ocaml dune)
 (tags
  (topics "sorting" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
